[gd_scene load_steps=6 format=3 uid="uid://dyk4okm8p0hyo"]

[ext_resource type="Script" path="res://Scripts/BulletStuff/laser_spawner.gd" id="1_aknnm"]
[ext_resource type="Texture2D" uid="uid://ea7yn7iawkw3" path="res://Assets/Texture/Particles/Ship Particle.png" id="2_8scnw"]

[sub_resource type="Curve" id="Curve_hcde7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.474592, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_g573t"]
curve = SubResource("Curve_hcde7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_igfln"]
particle_flag_disable_z = true
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 80.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 100.0
damping_max = 100.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_g573t")

[node name="LaserSpawner" type="Node2D"]
script = ExtResource("1_aknnm")
show_warning = true

[node name="ShootTimer" type="Timer" parent="."]

[node name="WarnLine" type="Line2D" parent="."]
z_index = -2
width = 0.0

[node name="LaunchEffect" type="GPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_igfln")
texture = ExtResource("2_8scnw")
one_shot = true
explosiveness = 1.0

[connection signal="timeout" from="ShootTimer" to="." method="shoot"]
